# skxperiments

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  notebooks.yml  publish.yml
docs/: README.md  ROADMAP.md
docs/en/: choosing.md  glossary.md  index.md
docs/en/theory/: 01-foundations.md  02-designs.md  03-estimation.md  04-inference.md  05-diagnostics.md
docs/pt-br/: escolhendo.md  glossario.md  index.md
docs/pt-br/teoria/: 01-fundamentos.md  02-desenhos.md  03-estimacao.md  04-inferencia.md  05-diagnosticos.md
examples/: README.md
examples/en/: 00_why_randomize.ipynb  01_first_experiment.ipynb  02_inference_three_ways.ipynb  04_balance_rerandomization.ipynb  05_blocking.ipynb  06_factorial.ipynb  07_many_tests.ipynb
examples/for_starters/en/: 03_reducing_variance.ipynb  (+2 more)
examples/pt-br/: 00_why_randomize.ipynb  01_first_experiment.ipynb  02_inference_three_ways.ipynb  03_reducing_variance.ipynb  06_factorial.ipynb  07_many_tests.ipynb
examples/use_cases/: README.md  _build_notebooks.py  _generate_data.py
skxperiments/: __init__.py  phase_01.py  pipeline.py
skxperiments/core/: __init__.py  assignment.py  base.py  exceptions.py  potential_outcomes.py  results.py
skxperiments/design/: __init__.py  balance.py  blocked_crd.py  crd.py  factorial.py  power.py  rerandomized_crd.py
skxperiments/diagnostics/: __init__.py  aa_test.py  balance_report.py  srm.py
skxperiments/estimators/: __init__.py  blocked_difference_in_means.py  cuped.py  difference_in_means.py  factorial_estimator.py  lin_estimator.py
skxperiments/inference/: __init__.py  bootstrap.py  multiple.py  neyman.py  randomization_test.py
skxperiments/reporting/: __init__.py  plots.py  summary.py
skxperiments/testing/: __init__.py
tests/: __init__.py  test_comparison.py  test_pipeline.py
tests/core/: test_assignment.py  test_base.py  test_exceptions.py  test_potential_outcomes.py  test_results.py
tests/design/: __init__.py  test_balance.py  test_blocked_crd.py  test_crd.py  test_factorial.py  test_power.py  test_rerandomized_crd.py
tests/diagnostics/: test_aa_test.py  test_balance_report.py  test_srm.py
tests/estimators/: __init__.py  test_blocked_difference_in_means.py  test_cuped.py  test_difference_in_means.py  test_factorial_estimator.py  test_lin_estimator.py
tests/inference/: __init__.py  test_bootstrap.py  test_multiple.py  test_neyman.py  test_randomization_test.py
tests/integration/: __init__.py  test_blocked_crd_bdim.py  test_crd_cuped.py  test_crd_dim.py  test_crd_lin.py  test_factorial_dim.py
tests/reporting/: test_plots.py  test_result_plots.py  test_summary.py
(+19 files in other folders)
