[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skxperiments"
version = "0.1.0-dev"
description = "Randomization-based experimental design and causal inference, sklearn-style."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "pre-commit",
    "ruff",
    "black",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=skxperiments"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true